cmake_minimum_required(VERSION 3.16)
project(ProjLI2 C)

set(CMAKE_C_STANDARD 99)

add_executable(ProjLI2 main.c cmake-build-debug/dados.c cmake-build-debug/dados.h cmake-build-debug/CMakeFiles/interface.c cmake-build-debug/CMakeFiles/interface.h cmake-build-debug/CMakeFiles/logica.c cmake-build-debug/CMakeFiles/logica.h)